# laba-osi-4

./: CMakeLists.txt  README.md  main.c  main.cpp  prog_1.c  prog_2.c  strace.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: dl_link.h  lib.h  translation.h
src/: CMakeLists.txt  dl_link.c  realiz_1.c  realiz_2.c  translation.c
tests/: CMakeLists.txt  tests01.cpp
